--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -166,7 +166,7 @@ jobs:
         uses: actions/upload-artifact@v3
         if: matrix.python-version == env.MAIN_PYTHON_VERSION
         with:
-          name: documentation-md
+          name: documentation-md-${{ matrix.mechanical-version }}
           path: package/doc/_build/markdown
           retention-days: 7
 
@@ -186,6 +186,9 @@ jobs:
     name: Documentation deploy
     runs-on: ubuntu-latest
     needs: [doc-build]
+    strategy:
+      matrix:
+        mechanical-version: ['23.2.0', '24.1.0']
 
     steps:
       - name: Checkout
@@ -194,8 +197,8 @@ jobs:
       - name: Download Artifacts
         uses: actions/download-artifact@v3
         with:
-          name: documentation-md
-          path: documentation-md
+          name: documentation-md-${{ matrix.mechanical-version }}
+          path: documentation-md-${{ matrix.mechanical-version }}
 
       - name: List all files
         run: ls -R .
@@ -206,6 +209,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
-          folder: documentation-md/
+          folder: documentation-md-${{ matrix.mechanical-version }}/
           clean: true
           single-commit: true
