--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -50,13 +50,16 @@ jobs:
     needs: [style, doc-style]
     runs-on: ${{ matrix.os }}
     container:
-      image: ghcr.io/ansys/mechanical:${{ matrix.mechanical-version }}
+      image: ghcr.io/ansys/mechanical:${{ matrix.versions.image }}
       options: --entrypoint /bin/bash
     strategy:
       matrix:
         os: [ubuntu-latest]
-        mechanical-version: ['23.2.0', '24.1.0']
-        python-version: ['3.9', '3.10', '3.11', '3.12']
+        versions: [
+          { image: '23.2.0', v: 'v232' },
+          { image: '24.1.0', v: 'v241' }
+        ]
+        python-version: ['3.10'] # ['3.9', '3.10', '3.11', '3.12']
     steps:
       - name: Install Git and checkout project
         uses: actions/checkout@v3
@@ -90,12 +93,12 @@ jobs:
       - name: Run main.py
         env:
           LICENSE_SERVER: ${{ secrets.LICENSE_SERVER }}
-          ANSYSCL232_DIR: /install/ansys_inc/v232/licensingclient
+          ANSYSCL232_DIR: /install/ansys_inc/${{ matrix.versions.v }}/licensingclient
           ANSYSLMD_LICENSE_FILE: 1055@${{ secrets.LICENSE_SERVER }}
           ANSYS_WORKBENCH_LOGGING_CONSOLE: 0
           ANSYS_WORKBENCH_LOGGING: 0
           ANSYS_WORKBENCH_LOGGING_FILTER_LEVEL: 2
-          AWP_ROOTDV_DEV: /install/ansys_inc/v232
+          AWP_ROOTDV_DEV: /install/ansys_inc/${{ matrix.versions.v }}
           NUM_CORES: 1
         run: |
           pip install ansys-pythonnet
@@ -166,7 +169,7 @@ jobs:
         uses: actions/upload-artifact@v3
         if: matrix.python-version == env.MAIN_PYTHON_VERSION
         with:
-          name: documentation-md-${{ matrix.mechanical-version }}
+          name: documentation-md-${{ matrix.versions.image }}
           path: package/doc/_build/markdown
           retention-days: 7
 
