--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -191,7 +191,7 @@ jobs:
     needs: [doc-build]
     strategy:
       matrix:
-        mechanical-version: ['23.2.0', '24.1.0']
+        mechanical-version: ['23.2.0'] # , 24.1.0']
 
     steps:
       - name: Checkout
