adjust repo for tech review

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -42,7 +42,7 @@ jobs:
       - name: PyAnsys documentation style checks
         uses: ansys/actions/doc-style@v4
         with:
-          vale-config: package/doc/.vale.ini
+          vale-config: doc/.vale.ini
           token: ${{ secrets.GITHUB_TOKEN }}
 
   doc-build:
@@ -59,7 +59,7 @@ jobs:
           { image: '23.2.0', v: 'v232' },
           # { image: '24.1.0', v: 'v241' }
         ]
-        python-version: ['3.10'] # ['3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.10'] #, '3.11', '3.12']
     steps:
       - name: Install Git and checkout project
         uses: actions/checkout@v3
@@ -85,7 +85,7 @@ jobs:
           apt-get install -y zip
           pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
           pip install --upgrade pip flit pytz tzdata
-          cd package
+
           mkdir -p src/ansys/mechanical/stubs
           touch src/ansys/mechanical/stubs/__init__.py
           pip install -e .[doc]
@@ -121,15 +121,13 @@ jobs:
 
       - name: Retrieve Mechanial version
         run: |
-          cd package
           pip install -e .
           echo "MECHANICAL_VERSION=$(python -c 'from ansys.mechanical.stubs import __version__; print(__version__)')" >> $GITHUB_ENV
           echo "Mechanical version is: $(python -c "from ansys.mechanical.stubs import __version__; print(__version__)")"
 
       - name: Install build and twine, and build dist artifacts
         run: |
-          cd package
-          python -m pip install .[package]
+          # This and the next step are the same as the build-library action
           python -m pip install build twine
           python -m build && python -m twine check dist/*
 
@@ -137,53 +135,52 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.PACKAGE_NAME }}-artifacts
-          path: package/dist/
+          path: dist/
           retention-days: 7
 
       - name: Install package and create wheelhouse
         run: |
-          cd package
-          python -m pip install .[package]
+          python -m pip install .
           python -m pip install importlib-metadata
-          python -m pip wheel .[package] -w wheelhouse
+          python -m pip wheel . -w wheelhouse
 
       - name: "Compress the wheelhouse"
         uses: vimtor/action-zip@v1.1
         with:
-          files: package/wheelhouse
+          files: wheelhouse
           dest: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-${{ matrix.os }}-${{ matrix.python-version }}.zip
 
       - name: "Upload the wheelhouse files"
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-${{ matrix.os }}-${{ matrix.python-version }}
-          path: package/wheelhouse/*
+          path: wheelhouse/*
           retention-days: 7
 
-      - name: Create Sphinx documentation
-        run: |
-          apt-get install git -y
-          sphinx-build -M markdown package/doc/source package/doc/_build
-
-      - name: Upload Markdown Documentation
-        uses: actions/upload-artifact@v3
-        if: matrix.python-version == env.MAIN_PYTHON_VERSION
-        with:
-          name: documentation-md-${{ matrix.versions.image }}
-          path: package/doc/_build/markdown
-          retention-days: 7
-
-      # - name: Generate needed files for deploying pages
+      # - name: Create Sphinx documentation
       #   run: |
-      #     touch package/doc/_build/html/.nojekyll
-      #     echo ${{ env.DOCUMENTATION_CNAME }} >> package/doc/_build/html/CNAME
+      #     apt-get install git -y
+      #     sphinx-build -M markdown doc/source doc/_build
 
-      # - name: Upload HTML Documentation
+      # - name: Upload Markdown Documentation
       #   uses: actions/upload-artifact@v3
+      #   if: matrix.python-version == env.MAIN_PYTHON_VERSION
       #   with:
-      #     name: documentation-html
-      #     path: package/doc/_build/html
+      #     name: documentation-md-${{ matrix.versions.image }}
+      #     path: doc/_build/markdown
       #     retention-days: 7
+
+      - name: Generate needed files for deploying pages
+        run: |
+          touch doc/_build/html/.nojekyll
+          echo ${{ env.DOCUMENTATION_CNAME }} >> doc/_build/html/CNAME
+
+      - name: Upload HTML Documentation
+        uses: actions/upload-artifact@v3
+        with:
+          name: documentation-html-${{ matrix.versions.image }}
+          path: doc/_build/html
+          retention-days: 7
 
   doc-deploy:
     name: Documentation deploy
@@ -200,8 +197,8 @@ jobs:
       - name: Download Artifacts
         uses: actions/download-artifact@v3
         with:
-          name: documentation-md-${{ matrix.mechanical-version }}
-          path: documentation-md-${{ matrix.mechanical-version }}
+          name: documentation-html-${{ matrix.mechanical-version }} # documentation-md-${{ matrix.mechanical-version }}
+          path: documentation-html-${{ matrix.mechanical-version }} # documentation-md-${{ matrix.mechanical-version }}
 
       - name: List all files
         run: ls -R .
@@ -212,6 +209,88 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
-          folder: documentation-md-${{ matrix.mechanical-version }}/
+          folder: documentation-html-${{ matrix.mechanical-version }}/ # documentation-md-${{ matrix.mechanical-version }}/
           clean: true
           single-commit: true
+
+  doc-deploy-dev:
+    name: "Deploy development documentation"
+    if: github.event_name == 'push'
+    runs-on: ubuntu-latest
+    needs: doc-build
+    steps:
+      - name: "Deploy development documentation"
+        uses: ansys/actions/doc-deploy-dev@v4
+        with:
+          cname: ${{ env.DOCUMENTATION_CNAME }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+  doc-deploy-stable:
+    name: "Deploy stable documentation"
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+    runs-on: ubuntu-latest
+    needs: doc-deploy-dev
+    steps:
+      - name: "Deploy stable documentation"
+        uses: ansys/actions/doc-deploy-stable@v4
+        with:
+          cname: ${{ env.DOCUMENTATION_CNAME }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+  doc-deploy-index:
+    name: "Index the documentation and scrap using PyMeilisearch"
+    runs-on: ubuntu-latest
+    needs: doc-deploy-dev
+    if: github.event_name == 'push'
+    steps:
+      - name: Scrape the stable documentation to PyMeilisearch
+        run: |
+          VERSION=$(python -c "from ansys.mechanical.stubs import __version__; print('.'.join(__version__.split('.')[:2]))")
+          VERSION_MEILI=$(python -c "from ansys.mechanical.stubs import __version__; print('-'.join(__version__.split('.')[:2]))")
+          echo "Calculated VERSION: $VERSION"
+          echo "Calculated VERSION_MEILI: $VERSION_MEILI"
+
+      - name: "Deploy the latest documentation index"
+        uses: ansys/actions/doc-deploy-index@v4.1
+        with:
+          cname: "scripting.mechanical.docs.pyansys.com/version/$VERSION"
+          index-name: "<index-name>v$VERSION_MEILI"
+          host-url: "<meilisearch-host-url>"
+          api-key: ${{ secrets.MEILISEARCH_API_KEY }}
+
+  release-pypi-private:
+    name: "Release to the private PyPI repository"
+    runs-on: ubuntu-latest
+    needs: [doc-build]
+    steps:
+      - name: "Release to the private PyPI repository"
+        if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+        uses: ansys/actions/release-pypi-private@v4
+        with:
+          library-name: ${{ env.PACKAGE_NAME }}
+          twine-username: "__token__"
+          twine-token: ${{ secrets.PYANSYS_PYPI_PRIVATE_PAT }}
+
+  release-pypi-public:
+    name: "Release to the public PyPI repository"
+    runs-on: ubuntu-latest
+    needs: [release-pypi-private]
+    steps:
+      - name: "Release to the public PyPI repository"
+        if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+        uses: ansys/actions/release-pypi-public@v4
+        with:
+          library-name: ${{ env.PACKAGE_NAME }}
+          twine-username: "__token__"
+          twine-token: ${{ secrets.PYPI_TOKEN }}
+
+  release-gitub:
+    name: "Release to GitHub"
+    runs-on: ubuntu-latest
+    needs: [release-pypi-public]
+    steps:
+      - name: "Release to GitHub"
+        if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+        uses: ansys/actions/release-github@v4
+        with:
+          library-name: ${{ env.PACKAGE_NAME }}
