--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,9 @@
 repos:
 
-# - repo: https://github.com/psf/black
-#   rev: 23.7.0
-#   hooks:
-#   - id: black
+- repo: https://github.com/psf/black
+  rev: 23.7.0
+  hooks:
+  - id: black
 
 - repo: https://github.com/adamchainz/blacken-docs
   rev: 1.16.0
@@ -34,3 +34,10 @@ repos:
   - id: debug-statements
   - id: check-yaml
   - id: trailing-whitespace
+
+- repo: https://github.com/ansys/pre-commit-hooks
+  rev: v0.2.9
+  hooks:
+  - id: add-license-headers
+    args:
+    - --start_year=2023
