--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -172,8 +172,8 @@ jobs:
 
       - name: Generate needed files for deploying pages
         run: |
-          touch doc/_build/html/.nojekyll
-          echo ${{ env.DOCUMENTATION_CNAME }} >> doc/_build/html/CNAME
+          touch .nojekyll CNAME
+          echo ${{ env.DOCUMENTATION_CNAME }} >> CNAME
 
       - name: Upload HTML Documentation
         uses: actions/upload-artifact@v3
@@ -284,7 +284,7 @@ jobs:
           twine-username: "__token__"
           twine-token: ${{ secrets.PYPI_TOKEN }}
 
-  release-gitub:
+  release-github:
     name: "Release to GitHub"
     runs-on: ubuntu-latest
     needs: [release-pypi-public]
