--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -172,6 +172,7 @@ jobs:
 
       - name: Create Sphinx documentation
         run: |
+          apt-get install git -y
           make -C doc html
 
       - name: Upload HTML Documentation
