--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -231,30 +231,41 @@ jobs:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
     needs: doc-build
+    strategy:
+      matrix:
+        mechanical-version: ['23.2.0'] # , 24.1.0']
     steps:
       - name: "Deploy development documentation"
         uses: ansys/actions/doc-deploy-dev@v4
         with:
           cname: ${{ env.DOCUMENTATION_CNAME }}
           token: ${{ secrets.GITHUB_TOKEN }}
+          doc-artifact-name: documentation-html-${{ matrix.mechanical-version }}
 
   doc-deploy-stable:
     name: "Deploy stable documentation"
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
     needs: doc-deploy-dev
+    strategy:
+      matrix:
+        mechanical-version: ['23.2.0'] # , 24.1.0']
     steps:
       - name: "Deploy stable documentation"
         uses: ansys/actions/doc-deploy-stable@v4
         with:
           cname: ${{ env.DOCUMENTATION_CNAME }}
           token: ${{ secrets.GITHUB_TOKEN }}
+          doc-artifact-name: documentation-html-${{ matrix.mechanical-version }}
 
   doc-deploy-index:
     name: "Index the documentation and scrap using PyMeilisearch"
     runs-on: ubuntu-latest
     needs: doc-deploy-dev
     if: github.event_name == 'push'
+    strategy:
+      matrix:
+        mechanical-version: ['23.2.0'] # , 24.1.0']
     steps:
       - name: Scrape the stable documentation to PyMeilisearch
         run: |
@@ -270,6 +281,7 @@ jobs:
           index-name: "<index-name>v$VERSION_MEILI"
           host-url: "<meilisearch-host-url>"
           api-key: ${{ secrets.MEILISEARCH_API_KEY }}
+          doc-artifact-name: documentation-html-${{ matrix.mechanical-version }}
 
   release-pypi-private:
     name: "Release to the private PyPI repository"
