create stubs in setup.py and add docstrings to files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,76 +1,6 @@
 [build-system]
-requires = ["flit_core >=3.2,<4"]
-build-backend = "flit_core.buildapi"
-
-[project]
-# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
-name = "ansys-mechanical-stubs"
-version = "0" # Becomes 23.2.0 (Mechanical version + path for PyMechanical stubs)
-description = "PyMechanical scripting API stubs."
-readme = "README.rst"
-requires-python = ">=3.9,<4"
-license = {file = "LICENSE"}
-authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
-maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
-
-classifiers = [
-    "Development Status :: 4 - Beta",
-    "Intended Audience :: Science/Research",
-    "Topic :: Scientific/Engineering :: Information Analysis",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-]
-
-dependencies = [
-    "build==1.0.3",
-    "certifi==2024.2.2",
-    "charset_normalizer==3.3.2",
-    "colorama==0.4.6",
-    "docutils==0.20.1",
-    "flit_core==3.9.0",
-    "flit==3.9.0",
-    "idna==3.6",
-    "importlib_metadata==7.0.1",
-    "packaging==23.2",
-    "pyproject_hooks==1.0.0",
-    "requests==2.31.0",
-    "tomli_w==1.0.0",
-    "tomli==2.0.1",
-    "urllib3==2.2.0",
-    "zipp==3.17.0",
-]
-
-[project.optional-dependencies]
-doc = [
-    "ansys-sphinx-theme==0.13.2",
-    "autodoc_pydantic==2.0.1",
-    "jupyter_sphinx==0.5.3",
-    "nbsphinx==0.9.3",
-    "numpydoc==1.6.0",
-    "Sphinx==7.2.6",
-    "sphinx-autoapi==3.0.0",
-    "sphinx-autodoc-typehints==1.25.3",
-    "sphinxcontrib-globalsubs==0.1.1",
-    "sphinxcontrib-httpdomain==1.8.1",
-    "sphinx-copybutton==0.5.2",
-    "sphinx_design==0.5.0",
-    "sphinx-jinja==2.0.2",
-    "sphinx-markdown-builder==0.6.6",
-    "sphinxnotes-strike==1.2.1",
-]
-
-[project.urls]
-Source = "https://github.com/ansys/mechanical-stubs/"
-Tracker = "https://github.com/ansys/mechanical-stubs/issues"
-Homepage = "https://github.com/ansys/mechanical-stubs"
-Documentation = "https://scripting.mechanical.docs.pyansys.com"
-
-[tool.flit.module]
-name = "ansys.mechanical.stubs"
+requires = ["ansys-pythonnet", "setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [tool.black]
 line-length = 100
