--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -97,7 +97,7 @@ jobs:
 
           mkdir -p src/ansys/mechanical/stubs
           touch src/ansys/mechanical/stubs/__init__.py
-          pip install .[doc] > results.txt
+          pip install .[doc] 2> results.txt
         continue-on-error: True
 
       - name: Check stubs were generated
