--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -128,6 +128,7 @@ jobs:
           pip install . 2> results.txt
           echo "MECHANICAL_VERSION=$(python -c 'from ansys.mechanical.stubs import __version__; print(__version__)')" >> $GITHUB_ENV
           echo "Mechanical version is: $(python -c "from ansys.mechanical.stubs import __version__; print(__version__)")"
+        continue-on-error: True
 
       - name: Install build and twine, and build dist artifacts
         run: |
@@ -135,6 +136,7 @@ jobs:
           python -m pip install build twine
           python -m build 2> build_results.txt
           python -m twine check dist/*
+        continue-on-error: True
 
       - name: "Upload distribution artifacts to GitHub artifacts"
         uses: actions/upload-artifact@v4
@@ -145,9 +147,10 @@ jobs:
 
       - name: Install package and create wheelhouse
         run: |
-          python -m pip install .
+          python -m pip install . 2> install_err.txt
           python -m pip install importlib-metadata
           python -m pip wheel . -w wheelhouse
+        continue-on-error: True
 
       - name: "Compress the wheelhouse"
         uses: vimtor/action-zip@v1.1
