--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -125,10 +125,9 @@ jobs:
           AWP_ROOTDV_DEV: /install/ansys_inc/${{ matrix.versions.v }}
           NUM_CORES: 1
         run: |
-          pip install . 2> results.txt
+          pip install -e .
           echo "MECHANICAL_VERSION=$(python -c 'from ansys.mechanical.stubs import __version__; print(__version__)')" >> $GITHUB_ENV
           echo "Mechanical version is: $(python -c "from ansys.mechanical.stubs import __version__; print(__version__)")"
-        continue-on-error: True
 
       - name: Install build and twine, and build dist artifacts
         run: |
@@ -147,7 +146,7 @@ jobs:
 
       - name: Install package and create wheelhouse
         run: |
-          python -m pip install . 2> install_err.txt
+          python -m pip install -e .
           python -m pip install importlib-metadata
           python -m pip wheel . -w wheelhouse
         continue-on-error: True
