--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -94,10 +94,11 @@ jobs:
           apt-get install -y zip
           pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
           pip install --upgrade pip flit pytz tzdata ansys-pythonnet
+          pip install -e .[doc]
 
           mkdir -p src/ansys/mechanical/stubs
           touch src/ansys/mechanical/stubs/__init__.py
-          pip install .[doc] 2> results.txt
+          pip install . 2> results.txt
         continue-on-error: True
 
       - name: Check stubs were generated
