--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -19,6 +19,13 @@ env:
   PACKAGE_NAME: ansys-mechanical-stubs
   PACKAGE_NAMESPACE: ansys.mechanical.stubs
   DOCUMENTATION_CNAME: scripting.mechanical.docs.pyansys.com
+  LICENSE_SERVER: ${{ secrets.LICENSE_SERVER }}
+  ANSYSLMD_LICENSE_FILE: 1055@${{ secrets.LICENSE_SERVER }}
+  ANSYS_WORKBENCH_LOGGING_CONSOLE: 0
+  ANSYS_WORKBENCH_LOGGING: 0
+  ANSYS_WORKBENCH_LOGGING_FILTER_LEVEL: 2
+  NUM_CORES: 1
+
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -64,16 +71,12 @@ jobs:
       - name: Install Git and checkout project
         uses: actions/checkout@v3
 
+      - name: Set ANSYSCL_DIR and AWP_ROOTDV_DEV
+        run:
+          echo "ANSYSCL${${{ matrix.versions.v }}#*v}_DIR=/install/ansys_inc/${{ matrix.versions.v }}/licensingclient" >> $GITHUB_ENV
+          echo "AWP_ROOTDV_DEV=/install/ansys_inc/${{ matrix.versions.v }}" >> $GITHUB_ENV
+
       - name: Install dependencies
-        env:
-          LICENSE_SERVER: ${{ secrets.LICENSE_SERVER }}
-          ANSYSCL232_DIR: /install/ansys_inc/${{ matrix.versions.v }}/licensingclient
-          ANSYSLMD_LICENSE_FILE: 1055@${{ secrets.LICENSE_SERVER }}
-          ANSYS_WORKBENCH_LOGGING_CONSOLE: 0
-          ANSYS_WORKBENCH_LOGGING: 0
-          ANSYS_WORKBENCH_LOGGING_FILTER_LEVEL: 2
-          AWP_ROOTDV_DEV: /install/ansys_inc/${{ matrix.versions.v }}
-          NUM_CORES: 1
         run: |
           apt update
           apt install --reinstall ca-certificates
@@ -116,15 +119,6 @@ jobs:
           fi
 
       - name: Retrieve Mechanial version
-        env:
-          LICENSE_SERVER: ${{ secrets.LICENSE_SERVER }}
-          ANSYSCL232_DIR: /install/ansys_inc/${{ matrix.versions.v }}/licensingclient
-          ANSYSLMD_LICENSE_FILE: 1055@${{ secrets.LICENSE_SERVER }}
-          ANSYS_WORKBENCH_LOGGING_CONSOLE: 0
-          ANSYS_WORKBENCH_LOGGING: 0
-          ANSYS_WORKBENCH_LOGGING_FILTER_LEVEL: 2
-          AWP_ROOTDV_DEV: /install/ansys_inc/${{ matrix.versions.v }}
-          NUM_CORES: 1
         run: |
           pip install -e .
           echo "MECHANICAL_VERSION=$(python -c 'from ansys.mechanical.stubs import __version__; print(__version__)')" >> $GITHUB_ENV
