--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -64,7 +64,7 @@ jobs:
         os: [ubuntu-latest]
         versions: [
           { image: '23.2.0', v: 'v232' },
-          # { image: '24.1.0', v: 'v241' }
+          { image: '24.1.0', v: 'v241' }
         ]
         python-version: ['3.10'] #, '3.11', '3.12']
     steps:
@@ -203,7 +203,7 @@ jobs:
     needs: [doc-build]
     strategy:
       matrix:
-        mechanical-version: ['23.2.0'] # , 24.1.0']
+        mechanical-version: ['23.2.0' , 24.1.0']
 
     steps:
       - name: Checkout
@@ -235,7 +235,7 @@ jobs:
     needs: doc-build
     strategy:
       matrix:
-        mechanical-version: ['23.2.0'] # , 24.1.0']
+        mechanical-version: ['23.2.0' , 24.1.0']
     steps:
       - name: "Deploy development documentation"
         uses: ansys/actions/doc-deploy-dev@v4
@@ -251,7 +251,7 @@ jobs:
     needs: doc-deploy-dev
     strategy:
       matrix:
-        mechanical-version: ['23.2.0'] # , 24.1.0']
+        mechanical-version: ['23.2.0' , 24.1.0']
     steps:
       - name: "Deploy stable documentation"
         uses: ansys/actions/doc-deploy-stable@v4
@@ -267,7 +267,7 @@ jobs:
     if: github.event_name == 'push'
     strategy:
       matrix:
-        mechanical-version: ['23.2.0'] # , 24.1.0']
+        mechanical-version: ['23.2.0' , 24.1.0']
     steps:
       - name: Scrape the stable documentation to PyMeilisearch
         run: |
