--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -71,13 +71,13 @@ jobs:
       - name: Install Git and checkout project
         uses: actions/checkout@v3
 
-      - name: Set ANSYSCL_DIR and AWP_ROOTDV_DEV
-        run:
-          echo "ANSYSCL${${{ matrix.versions.v }}#*v}_DIR=/install/ansys_inc/${{ matrix.versions.v }}/licensingclient" >> $GITHUB_ENV
-          echo "AWP_ROOTDV_DEV=/install/ansys_inc/${{ matrix.versions.v }}" >> $GITHUB_ENV
-
       - name: Install dependencies
+        env:
+          AWP_ROOTDV_DEV: /install/ansys_inc/${{ matrix.versions.v }}
+          ANSYSCL${${{ matrix.versions.v }}#*v}_DIR: /install/ansys_inc/${{ matrix.versions.v }}/licensingclient
         run: |
+          echo $GITHUB_ENV
+
           apt update
           apt install --reinstall ca-certificates
           apt install software-properties-common -y
@@ -125,6 +125,9 @@ jobs:
           echo "Mechanical version is: $(python -c "from ansys.mechanical.stubs import __version__; print(__version__)")"
 
       - name: Install build and twine, and build dist artifacts
+        env:
+          AWP_ROOTDV_DEV: /install/ansys_inc/${{ matrix.versions.v }}
+          ANSYSCL${${{ matrix.versions.v }}#*v}_DIR: /install/ansys_inc/${{ matrix.versions.v }}/licensingclient
         run: |
           # This and the next step are the same as the build-library action
           python -m pip install build twine
@@ -140,6 +143,9 @@ jobs:
           retention-days: 7
 
       - name: Install package and create wheelhouse
+        env:
+          AWP_ROOTDV_DEV: /install/ansys_inc/${{ matrix.versions.v }}
+          ANSYSCL${${{ matrix.versions.v }}#*v}_DIR: /install/ansys_inc/${{ matrix.versions.v }}/licensingclient
         run: |
           python -m pip install -e .
           python -m pip install importlib-metadata
