--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -63,8 +63,8 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         versions: [
-          { image: '23.2.0', v: 'v232' },
-          { image: '24.1.0', v: 'v241' }
+          { image: '23.2.0', version: '232' },
+          { image: '24.1.0', version: '241' }
         ]
         python-version: ['3.10'] #, '3.11', '3.12']
     steps:
@@ -73,11 +73,9 @@ jobs:
 
       - name: Install dependencies
         env:
-          AWP_ROOTDV_DEV: /install/ansys_inc/${{ matrix.versions.v }}
-          ANSYSCL${${{ matrix.versions.v }}#*v}_DIR: /install/ansys_inc/${{ matrix.versions.v }}/licensingclient
+          AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.versions.version }}
+          ANSYSCL${{ matrix.versions.version }}_DIR: /install/ansys_inc/v${{ matrix.versions.version }}/licensingclient
         run: |
-          echo $GITHUB_ENV
-
           apt update
           apt install --reinstall ca-certificates
           apt install software-properties-common -y
@@ -126,8 +124,8 @@ jobs:
 
       - name: Install build and twine, and build dist artifacts
         env:
-          AWP_ROOTDV_DEV: /install/ansys_inc/${{ matrix.versions.v }}
-          ANSYSCL${${{ matrix.versions.v }}#*v}_DIR: /install/ansys_inc/${{ matrix.versions.v }}/licensingclient
+          AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.versions.version }}
+          ANSYSCL${{ matrix.versions.version }}_DIR: /install/ansys_inc/v${{ matrix.versions.version }}/licensingclient
         run: |
           # This and the next step are the same as the build-library action
           python -m pip install build twine
@@ -144,8 +142,8 @@ jobs:
 
       - name: Install package and create wheelhouse
         env:
-          AWP_ROOTDV_DEV: /install/ansys_inc/${{ matrix.versions.v }}
-          ANSYSCL${${{ matrix.versions.v }}#*v}_DIR: /install/ansys_inc/${{ matrix.versions.v }}/licensingclient
+          AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.versions.version }}
+          ANSYSCL${{ matrix.versions.version }}_DIR: /install/ansys_inc/v${{ matrix.versions.version }}/licensingclient
         run: |
           python -m pip install -e .
           python -m pip install importlib-metadata
