--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -132,6 +132,20 @@ jobs:
           python -m twine check dist/*
         continue-on-error: True
 
+      - name: Check stubs were generated
+        run: |
+          cat build_results.txt
+
+          # Check if failure occurred
+          output=$(grep -c "Done processing all mechanical stubs" build_results.txt)
+          if [ $output -eq 1 ]; then
+            echo "All mechanical stubs were created"
+            exit 0
+          else
+            echo "There was an issue creating the mechanical stubs"
+            exit 1
+          fi
+
       - name: "Upload distribution artifacts to GitHub artifacts"
         uses: actions/upload-artifact@v4
         with:
@@ -146,8 +160,22 @@ jobs:
         run: |
           python -m pip install -e .
           python -m pip install importlib-metadata
-          python -m pip wheel . -w wheelhouse
+          python -m pip wheel . -w wheelhouse 2> wheel_results.txt
         continue-on-error: True
+
+      - name: Check stubs were generated
+        run: |
+          cat wheel_results.txt
+
+          # Check if failure occurred
+          output=$(grep -c "Done processing all mechanical stubs" wheel_results.txt)
+          if [ $output -eq 1 ]; then
+            echo "All mechanical stubs were created"
+            exit 0
+          else
+            echo "There was an issue creating the mechanical stubs"
+            exit 1
+          fi
 
       - name: "Compress the wheelhouse"
         uses: vimtor/action-zip@v1.1
@@ -162,18 +190,18 @@ jobs:
           path: wheelhouse/*
           retention-days: 7
 
-      # - name: Create Sphinx documentation
-      #   run: |
-      #     apt-get install git -y
-      #     sphinx-build -M markdown doc/source doc/_build
+      - name: Create Markdown documentation
+        run: |
+          apt-get install git -y
+          sphinx-build -M markdown doc/source doc/_build
 
-      # - name: Upload Markdown Documentation
-      #   uses: actions/upload-artifact@v3
-      #   if: matrix.python-version == env.MAIN_PYTHON_VERSION
-      #   with:
-      #     name: documentation-md-${{ matrix.versions.image }}
-      #     path: doc/_build/markdown
-      #     retention-days: 7
+      - name: Upload Markdown Documentation
+        uses: actions/upload-artifact@v3
+        if: matrix.python-version == env.MAIN_PYTHON_VERSION
+        with:
+          name: documentation-md-${{ matrix.versions.image }}
+          path: doc/_build/markdown
+          retention-days: 7
 
       - name: Create Sphinx documentation
         run: |
@@ -181,7 +209,7 @@ jobs:
           pip install -e .[doc]
           make -C doc html
 
-      - name: Upload HTML Documentation
+      - name: Upload Sphinx HTML Documentation
         uses: actions/upload-artifact@v3
         if: matrix.python-version == env.MAIN_PYTHON_VERSION
         with:
@@ -193,13 +221,6 @@ jobs:
         run: |
           touch .nojekyll CNAME
           echo ${{ env.DOCUMENTATION_CNAME }} >> CNAME
-
-      - name: Upload HTML Documentation
-        uses: actions/upload-artifact@v3
-        with:
-          name: documentation-html-${{ matrix.versions.image }}
-          path: doc/_build/html
-          retention-days: 7
 
   doc-deploy:
     name: Documentation deploy
