--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -98,11 +98,13 @@ jobs:
 
           mkdir -p src/ansys/mechanical/stubs
           touch src/ansys/mechanical/stubs/__init__.py
-          pip install . 2> results.txt
+          pip install . > results.txt
         continue-on-error: True
 
       - name: Check stubs were generated
         run: |
+          cat results.txt
+
           # Check if failure occurred
           output=$(grep -c "Done processing all mechanical stubs" results.txt)
           if [ $output -eq 1 ]; then
@@ -126,12 +128,14 @@ jobs:
         run: |
           # This and the next step are the same as the build-library action
           python -m pip install build twine
-          python -m build 2> build_results.txt
+          python -m build > build_results.txt
           python -m twine check dist/*
         continue-on-error: True
 
       - name: Check stubs were generated
         run: |
+          cat build_results.txt
+
           # Check if failure occurred
           output=$(grep -c "Done processing all mechanical stubs" build_results.txt)
           if [ $output -eq 1 ]; then
@@ -156,11 +160,13 @@ jobs:
         run: |
           python -m pip install -e .
           python -m pip install importlib-metadata
-          python -m pip wheel . -w wheelhouse 2> wheel_results.txt
+          python -m pip wheel . -w wheelhouse > wheel_results.txt
         continue-on-error: True
 
       - name: Check stubs were generated
         run: |
+          cat wheel_results.txt
+
           # Check if failure occurred
           output=$(grep -c "Done processing all mechanical stubs" wheel_results.txt)
           if [ $output -eq 1 ]; then
